[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/starter_select_ui.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/sprites/backgrounds/starter_select_bg.png" id="2"]

[node name="StarterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -140.0
offset_right = 280.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Choose Your Starter Monster"
horizontal_alignment = 1

[node name="CardContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Card1" type="PanelContainer" parent="VBox/CardContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 200)

[node name="VBox" type="VBoxContainer" parent="VBox/CardContainer/Card1"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Sprite" type="TextureRect" parent="VBox/CardContainer/Card1/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
stretch_mode = 5
expand_mode = 1

[node name="Name" type="Label" parent="VBox/CardContainer/Card1/VBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="Stats" type="Label" parent="VBox/CardContainer/Card1/VBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="VBox/CardContainer/Card1/VBox"]
layout_mode = 2
text = "Choose"

[node name="Card2" type="PanelContainer" parent="VBox/CardContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 200)

[node name="VBox" type="VBoxContainer" parent="VBox/CardContainer/Card2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Sprite" type="TextureRect" parent="VBox/CardContainer/Card2/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
stretch_mode = 5
expand_mode = 1

[node name="Name" type="Label" parent="VBox/CardContainer/Card2/VBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="Stats" type="Label" parent="VBox/CardContainer/Card2/VBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="VBox/CardContainer/Card2/VBox"]
layout_mode = 2
text = "Choose"

[node name="Card3" type="PanelContainer" parent="VBox/CardContainer"]
layout_mode = 2
custom_minimum_size = Vector2(150, 200)

[node name="VBox" type="VBoxContainer" parent="VBox/CardContainer/Card3"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Sprite" type="TextureRect" parent="VBox/CardContainer/Card3/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(64, 64)
stretch_mode = 5
expand_mode = 1

[node name="Name" type="Label" parent="VBox/CardContainer/Card3/VBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="Stats" type="Label" parent="VBox/CardContainer/Card3/VBox"]
layout_mode = 2
horizontal_alignment = 1

[node name="SelectButton" type="Button" parent="VBox/CardContainer/Card3/VBox"]
layout_mode = 2
text = "Choose"
